[package]
name = "sort_downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
serde = { version = "1", features = ["derive"] } 
ron = "0.8.1"
clap = { version = "4.0.0", features = ["derive"] }
colored = "2"
byte-unit = "5.0.3"
